<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lab Access Control</string>

    <!--====                        Login Activity                                 ====-->
    <!-- View -->
    <string name="tvLogin">Sign in</string>
    <string name="inputUserName">Username</string>
    <string name="inputPassword">Password</string>
    <string name="btnLogIn">Sign in  \u25B6&#xFE0E; </string>
    <!--&#xFE0E; disables unicode-emoji replacement-->
    <!--\u25B6 equals ▶ -->

    <!-- Toasts -->
    <string name="error_error">Check input fields</string>
    <string name="error_server_unavailable">Server is temporary unavailable, try again later.</string>

    <!-- TextInputLayout error -->
    <string name="error_username_notfound">Username is incorrect</string>
    <string name="error_wrong_password">Password is incorrect</string>
    <string name="error_username_empty">* Field can\'t be empty!</string>
    <string name="error_username_blank">* Field can\'t contain blank characters!</string>
    <string name="error_username_dot_format">* Field must be in format: name.lastname</string>
    <string name="error_password_empty">* Field cant\'t be empty!</string>
    <string name="error_password_blank">* Field can\'t contain blank characters!</string>

    <!--     Fragment Wait Approval        -->
    <string name="device_approval">Device approval</string>
    <string name="device_approval_desc">You have signed in from a new device. You need to wait for the admin approval</string>
    <string name="progress_desc_contacting">Contacting server…</string>
    <string name="progress_desc_waiting">Waiting for approval…</string>
    <string name="progress_desc_approved">Your device is approved</string>
    <string name="fragment_approval_continue">Continue ▶︎</string>
    <string name="fragment_approval_cancel">◀︎ Cancel</string>

    <!--====                         Dialogs                                      ====-->
    <string name="dialog_button_settings">Settings</string>
    <string name="dialog_button_quit">Close application</string>
    <string name="dialog_text_no_internet">A network connection is required. Please connect to a WiFi or cellular network…</string>
    <string name="dialog_title_no_connection">No Connection</string>
    <string name="dialog_title_mac_notfound">MAC Address</string>
    <string name="dialog_text_no_mac">We didn\'t succeeded to obtain your device MAC address. It\'s time to update application.</string>
    <string name="dialog_login_wait">Authenticating user, please wait…</string>

    <!--===                            Notifications                                ===-->
    <string name="notification_title">VTŠ Apps Team</string>
    <string name="notification_device_approved">Your device is approved. You may now use the application.</string>
    <string name="notification_network_monitoring_title">Network monitoring...</string>
    <string name="notification_network_monitoring_desc">You should hide this notification in notification settings</string>
    <string name="notification_server_offline">Server is offline!</string>
    <string name="notification_lab_access_control_title">Lab Access Control</string>

    <!--===                            Notification channels                        ===-->
    <string name="notification_name_mac_change">MAC Change requests</string>
    <string name="notification_desc_mac_change">Notify me when administrator approve my device</string>
    <string name="notification_name_lab_control">LAB Control</string>
    <string name="notification_desc_lab_control">Notification for controlling door\'s lock</string>
    <string name="service_connectivity_desc">This service check for connectivity for displaying notification</string>
    <string name="notification_name_hidden">Notification for background service</string>
    <string name="notification_desc_hidden">This is hidden notification</string>

    <!--===                         Lab Control                                     ====-->
    <string name="welcome_message">Welcome to Lab</string>
    <string name="goodbye_message">You have left the lab</string>
    <string name="button_unlock">Unlock</string>


    <!--====                        Main Activity                                 ====-->
    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_avatar_desc">User avatar</string>
    <string name="menu_item_homepage">Lab Access</string>
    <string name="menu_item_current_in">Present in Lab</string>
    <string name="menu_item_time_spent">Time in Lab</string>
    <string name="menu_item_settings">Settings</string>
    <string name="toolbar_option_notifications">Notifications</string>

    <!--===                     Fragment Present Members                        ====-->
    <string name="refresh_refreshing">Refreshing…</string>
    <string name="refresh_loading">Loading…</string>
    <string name="refresh_release">Release and refresh immediately</string>
    <string name="refresh_finish">Refresh completed</string>
    <string name="refresh_failed">Refresh failed</string>
    <string name="refresh_pull">Pull down to refresh</string>
    <string name="refresh_last_update">Last update:</string>
    <string name="present_members_error_check_later">Currently, there are no members in laboratory!\n Check later</string>
    <string name="present_members_text_please_wait" tools:ignore="TypographyEllipsis">Please wait...</string>
    <string name="rank_vts_staff">VTS Staff</string>
    <string name="rank_new_member">Junior Member</string>
    <string name="rank_senior_member">Senior Member</string>
    <string name="rank_retired_member">Retired member</string>
    <string name="rank_coordinator">Coordinator of VTS Apps Team</string>
</resources>