<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activities.login.ui.fragments.WaitApprovalFragment">
    <data>
        <import type="android.view.View"/>
        <import type="com.vtsappsteam.labaccesscontrol.R"/>
        <variable
            name="viewModel"
            type="com.vtsappsteam.labaccesscontrol.activities.login.data.WaitApprovalViewModel" />
        <variable
            name="fragment"
            type="com.vtsappsteam.labaccesscontrol.activities.login.ui.fragments.WaitApprovalFragment" />
    </data>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/device_approval"
        android:textColor="@color/themeTextGray"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_approval_desc"
            android:textColor="@color/themeTextGray"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:visibility="@{viewModel.enabled? View.INVISIBLE : View.VISIBLE}"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                tools:visibility="invisible"
                android:visibility="@{viewModel.enabled? View.VISIBLE : View.INVISIBLE}"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_accept"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_marginTop="38dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@{viewModel.enabled? @color/themeTextGreen : @color/themeTextBlue}"
                android:text="@{context.resources.getString(viewModel.progressText)}"
                tools:text="@string/progress_desc_contacting"/>
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSingUp2"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:text="@string/fragment_approval_cancel"
            android:scaleType="fitCenter"
            android:background="@drawable/button_ripple"
            android:onClick="@{() -> fragment.onCancelButtonClicked()}"
            android:textAllCaps="false"
            android:textSize="18dp"
            tools:ignore="SpUsage" />
        <Button
            android:enabled="@{viewModel.enabled}"
            tools:enabled="false"
            android:layout_gravity="end"
            android:id="@+id/btnSingUp"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:text="@string/fragment_approval_continue"
            android:scaleType="fitCenter"
            android:background="@drawable/button_ripple"
            android:onClick="@{() -> fragment.onNextButtonClicked()}"
            android:textAllCaps="false"
            android:textSize="18dp"
            tools:ignore="SpUsage" />
    </FrameLayout>
</LinearLayout>
</layout>