<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_background">

        <ImageView
            android:id="@+id/dialogImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/nosignal"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_title_no_connection"
            android:textColor="@color/themeTextBlue"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialogDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dialog_text_no_internet"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/themeTextGray"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_button_quit"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:background="@drawable/button_login_selector"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/exo_medium"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_button_settings"
                android:background="@drawable/button_login_selector"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:fontFamily="@font/exo_medium"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>