<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.login.ui.CredentialsFragment">
    <data>
        <variable
            name="viewModel"
            type="com.vtsappsteam.labaccesscontrol.activities.login.data.CredentialsViewModel" />
        <variable
            name="fragment"
            type="com.vtsappsteam.labaccesscontrol.activities.login.ui.CredentialsFragment" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tvLogin"
        android:textColor="@color/themeTextGray"
        android:textSize="22sp" />

    <com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayout"
        app:errorEnabled="true"
        app:setErrorMessage="@{viewModel.textErrorUsername}"
        app:errorTextAppearance="@style/hint_error_appearance"
        tools:layout_marginBottom="20dp">

        <com.vtsappsteam.labaccesscontrol.widgets.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-15dp"
            android:autofillHints="username"
            android:background="@drawable/input_style"
            android:hint="@string/inputUserName"
            android:inputType="text"
            android:minHeight="57dp"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text="@={viewModel.editUsernameContent}"
            android:textColor="@android:color/black"
            app:requireFocus="@{viewModel.editUsernameFocus}"
            tools:ignore="RtlSymmetry"
            tools:targetApi="o" />
    </com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout>
    <com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:theme="@style/TextInputLayout"
        app:errorTextAppearance="@style/hint_error_appearance"
        app:errorEnabled="true"
        app:setErrorMessage="@{viewModel.textErrorPassword}"
        tools:layout_marginBottom="20dp">
        <com.vtsappsteam.labaccesscontrol.widgets.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:ems="10"
            android:hint="@string/inputPassword"
            android:text="@={viewModel.editPasswordContent}"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingBottom="8dp"
            android:layout_marginBottom="-15dp"
            android:singleLine="true"
            android:minHeight="57dp"
            android:textColor="@android:color/black"
            android:autofillHints="password"
            tools:targetApi="o"
            tools:ignore="RtlSymmetry"
            app:requireFocus="@{viewModel.editPasswordFocus}"/>
    </com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout>

    <Button
        android:enabled="@{viewModel.buttonEnabled}"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:text="@string/btnLogIn"
        android:scaleType="fitCenter"
        android:background="@drawable/button_ripple"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:onClick="@{() -> fragment.onButtonClicked()}"
        tools:ignore="SpUsage" />
</LinearLayout>
</layout>