<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.vtsappsteam.labaccesscontrol.activities.login.data.LoginViewModel" />
        <variable
            name="activity"
            type="com.vtsappsteam.labaccesscontrol.activities.login.ui.LoginActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_image"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/mainLayout"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_header"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/tvLogin"
                android:textColor="@color/themeTextGray"
                android:textSize="22sp" />

            <com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout"
                app:errorEnabled="true"
                app:setErrorMessage="@{viewModel.textErrorUsername}"
                tools:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_style"
                    android:hint="@string/inputUserName"
                    android:text="@={viewModel.editUsernameContent}"
                    android:inputType="text"
                    android:minHeight="57dp"
                    android:paddingStart="10dp"
                    android:layout_marginBottom="-15dp"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:autofillHints="username"
                    tools:targetApi="o"
                    tools:ignore="RtlSymmetry"
                    app:requireFocus="@{viewModel.editUsernameFocus}"/>
            </com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout>
            <com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:theme="@style/TextInputLayout"
                app:errorEnabled="true"
                app:setErrorMessage="@{viewModel.textErrorPassword}"
                tools:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_style"
                    android:ems="10"
                    android:hint="@string/inputPassword"
                    android:text="@={viewModel.editPasswordContent}"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="-15dp"
                    android:singleLine="true"
                    android:minHeight="57dp"
                    android:textColor="@android:color/black"
                    android:autofillHints="password"
                    tools:targetApi="o"
                    tools:ignore="RtlSymmetry"
                    app:requireFocus="@{viewModel.editPasswordFocus}"/>
            </com.vtsappsteam.labaccesscontrol.widgets.TextInputLayout>

            <Button
                android:id="@+id/btnSingUp"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:text="@string/btnLogIn"
                android:scaleType="fitCenter"
                android:background="@drawable/button_login_selector"
                android:textAllCaps="false"
                android:textSize="18dp"
                android:onClick="@{() -> activity.onButtonClicked()}"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </LinearLayout>
</layout>